--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </nav>
     </header>
 
-    <section class="peliculas">
+    <section class=" col-md-2 peliculas">
         <article>
             <div>
                 <h2 class="m-3">Populares de Netflix</h2>
@@ -66,6 +66,9 @@
                 <div class="item">
                     <img src="./img/catastrofers.jpeg" alt="Poster">
                 </div>
+                <div class="item">
+                    <img src="./img/up.png" alt="Poster">
+                </div>
             </div>
         </article>
         <article>
@@ -92,7 +95,7 @@
         </article>
         <article>
             <div>
-                <h3 class="m-3">Vistos recientemente</h3>
+                <h3 class="m-3">Top Argentina</h3>
             </div>
             <div class="container">
                 <div class="item">
@@ -138,7 +141,7 @@
 
         <article>
             <div>
-                <h3 class="m-3">Destacados</h3>
+                <h3 class="m-3">Destacados de la semana</h3>
             </div>
             <div class="container">
                 <div class="item">
@@ -161,7 +164,7 @@
 
         <article>
             <div>
-                <h3 class="m-3">Destacados</h3>
+                <h3 class="m-3">Destacados del mes</h3>
             </div>
             <div class="container">
                 <div class="item">
